// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sign + Verify: ES256 1`] = `
Object {
  "header": Object {
    "alg": "ES256",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Sign + Verify: ES384 1`] = `
Object {
  "header": Object {
    "alg": "ES384",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Sign + Verify: ES512 1`] = `
Object {
  "header": Object {
    "alg": "ES512",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Sign + Verify: HS256 1`] = `
Object {
  "header": Object {
    "alg": "HS256",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Sign + Verify: HS384 1`] = `
Object {
  "header": Object {
    "alg": "HS384",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Sign + Verify: HS512 1`] = `
Object {
  "header": Object {
    "alg": "HS512",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Sign + Verify: RS256 1`] = `
Object {
  "header": Object {
    "alg": "RS256",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Sign + Verify: RS384 1`] = `
Object {
  "header": Object {
    "alg": "RS384",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Sign + Verify: RS512 1`] = `
Object {
  "header": Object {
    "alg": "RS512",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
    "name": "Test User",
    "sub": "123aaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa",
  },
}
`;

exports[`Verify JWKS external tokens: %s 1`] = `
Object {
  "header": Object {
    "alg": "RS256",
    "kid": Any<String>,
    "typ": "JWT",
  },
  "payload": Object {
    "iat": Any<Number>,
    "jti": Any<String>,
  },
}
`;

exports[`Verify external tokens: ES256 1`] = `
Object {
  "header": Object {
    "alg": "ES256",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1516239022,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    70,
    85,
    122,
    73,
    49,
    78,
    105,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
  ],
}
`;

exports[`Verify external tokens: ES384 1`] = `
Object {
  "header": Object {
    "alg": "ES384",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1516239022,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    70,
    85,
    122,
    77,
    52,
    78,
    67,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
  ],
}
`;

exports[`Verify external tokens: ES512 1`] = `
Object {
  "header": Object {
    "alg": "ES512",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1516239022,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    70,
    85,
    122,
    85,
    120,
    77,
    105,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
  ],
}
`;

exports[`Verify external tokens: HS256 1`] = `
Object {
  "header": Object {
    "alg": "HS256",
    "type": "JWT",
  },
  "payload": Object {
    "iat": 1660313702,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    48,
    101,
    88,
    66,
    108,
    73,
    106,
    111,
    105,
    83,
    108,
    100,
    85,
    73,
    105,
    119,
    105,
    89,
    87,
    120,
    110,
    73,
    106,
    111,
    105,
    83,
    70,
    77,
    121,
    78,
    84,
    89,
    105,
    102,
    81,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    106,
    89,
    119,
    77,
    122,
    69,
    122,
    78,
    122,
    65,
    121,
    102,
    81,
  ],
}
`;

exports[`Verify external tokens: HS384 1`] = `
Object {
  "header": Object {
    "alg": "HS384",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1516239022,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    73,
    85,
    122,
    77,
    52,
    78,
    67,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
  ],
}
`;

exports[`Verify external tokens: HS512 1`] = `
Object {
  "header": Object {
    "alg": "HS512",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1516239022,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    73,
    85,
    122,
    85,
    120,
    77,
    105,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
  ],
}
`;

exports[`Verify external tokens: RS256 1`] = `
Object {
  "header": Object {
    "alg": "RS256",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1516239022,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    83,
    85,
    122,
    73,
    49,
    78,
    105,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
  ],
}
`;

exports[`Verify external tokens: RS384 1`] = `
Object {
  "header": Object {
    "alg": "RS384",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1516239022,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    83,
    85,
    122,
    77,
    52,
    78,
    67,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
  ],
}
`;

exports[`Verify external tokens: RS512 1`] = `
Object {
  "header": Object {
    "alg": "RS512",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1516239022,
    "name": "John Doe",
    "sub": "1234567890",
  },
  "signature": ArrayBuffer [],
  "signedData": Uint8Array [
    101,
    121,
    74,
    104,
    98,
    71,
    99,
    105,
    79,
    105,
    74,
    83,
    85,
    122,
    85,
    120,
    77,
    105,
    73,
    115,
    73,
    110,
    82,
    53,
    99,
    67,
    73,
    54,
    73,
    107,
    112,
    88,
    86,
    67,
    74,
    57,
    46,
    101,
    121,
    74,
    122,
    100,
    87,
    73,
    105,
    79,
    105,
    73,
    120,
    77,
    106,
    77,
    48,
    78,
    84,
    89,
    51,
    79,
    68,
    107,
    119,
    73,
    105,
    119,
    105,
    98,
    109,
    70,
    116,
    90,
    83,
    73,
    54,
    73,
    107,
    112,
    118,
    97,
    71,
    52,
    103,
    82,
    71,
    57,
    108,
    73,
    105,
    119,
    105,
    97,
    87,
    70,
    48,
    73,
    106,
    111,
    120,
    78,
    84,
    69,
    50,
    77,
    106,
    77,
    53,
    77,
    68,
    73,
    121,
    102,
    81,
  ],
}
`;
